manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datamon-deployment
  labels:
    app: datamon
spec:
  selector:
    matchLabels:
      app: datamon
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'    
      labels:
        app: datamon
    spec:
      containers:
      - name: datamon-container
        image: datamon
        ports:
        - containerPort: 8088
