manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datamon-service
spec:
  selector:
    app: datamon
  ports:
  - protocol: TCP
    port: 8088
    targetPort: 8088
